# coterie

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE-NOTES.md  ARCHITECTURE-PUNCHLIST.md  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile  PLAN-stripe-billing.md  README.md  ROADMAP.md  TODO.md  config.toml  tailwind.config.js
.github/workflows/: deploy.yml  release.yml
config/: seed.toml
config/examples/: baduk-club.toml  congregation.toml  hacker-club.toml
deploy/: .env.staging  Caddyfile.snippet  DEPLOY-ALPINE.md  DEPLOY-AWS.md  DEPLOY-DIGITALOCEAN.md  MIGRATION.md  OPS.md  RESTORE.md  SETUP.md  STRIPE-SETUP.md  backup.sh  config.toml.staging  coterie-backup.service  coterie-backup.timer  coterie.openrc  coterie.service  install.sh  provision.sh  release-deploy.sh  run.sh  switch-stripe-to-live.sh  uninstall.sh
deploy/coterie-provision/: Cargo.toml
deploy/coterie-provision/src/: caddyfile.rs  checklist.rs  env_template.rs  fs_ops.rs  github_api.rs  install.rs  lib.rs  main.rs  output.rs  prompts.rs  stripe_api.rs  stripe_check.rs  switch_to_live.rs  system.rs  test_support.rs  version_selector.rs
deploy/coterie-provision/tests/: caddyfile.rs  cli_parsing.rs  install_flow.rs  switch_to_live.rs
deploy/coterie-provision/tests/fixtures/: caddyfile_example.txt  github_releases.json
examples/: static-site-integration.html
examples/baduk-club-site/: calendar.html  events.html  index.html  join.html
examples/congregation-site/: calendar.html  events.html  index.html  join.html
examples/hacker-club-site/: README.md  calendar.html  events.html  index.html  join.html
examples/public-site/: README.md  events.html  index.html  join.html
migrations/: 001_initial_schema.sql  002_add_image_fields.sql  002_settings.sql  003_csrf_tokens.sql  003_payment_methods.sql  004_add_hackathon_event_type.sql  004_billing_settings.sql  005_add_is_admin.sql  005_configurable_types.sql  006_stripe_event_idempotency.sql  007_email_verification_and_reset.sql  008_email_settings.sql  009_dues_reminder_tracking.sql  010_drop_csrf_tokens.sql  011_audit_retention_setting.sql  012_discord_settings.sql  013_payment_donation_campaign_fk.sql  014_payment_dues_extended_at.sql  015_payments_unique_stripe_id.sql  016_payment_public_donations.sql  017_org_receipt_settings.sql  018_totp_2fa.sql  019_admin_totp_required_setting.sql  020_recurring_events.sql  021_drop_membership_type_enum.sql  022_event_reminder_sent_at.sql  023_event_reminder_lead_hours_setting.sql  024_announcement_scheduled_publish.sql  025_event_series_exceptions.sql  026_expense_tracking.sql
openspec/: config.yaml
src/: admin_cli.rs  error.rs  lib.rs  main.rs
src/api/: docs.rs  mod.rs  state.rs
src/auth/: csrf.rs  email_tokens.rs  mod.rs  pending_login.rs  recovery_codes.rs  secret_crypto.rs  session.rs  tokens.rs  totp.rs
src/config/: mod.rs
src/domain/: announcement.rs  configurable_types.rs  donation.rs  event.rs  event_exception.rs  expense.rs  member.rs  mod.rs  payment.rs  payment_method.rs  recurrence.rs  scheduled_payment.rs  settings.rs
src/email/: dynamic_sender.rs  log_sender.rs  mod.rs  smtp_sender.rs  templates.rs
src/integrations/: admin_alert_email.rs  discord.rs  discord_client.rs  mod.rs  unifi.rs
src/jobs/: billing_runner.rs  mod.rs
src/payments/: fake_gateway.rs  gateway.rs  mod.rs  stripe_client.rs  webhook_dispatcher.rs
src/repository/: announcement_repository.rs  announcement_type_repository.rs  basic_type_repository.rs  donation_repository.rs  event_repository.rs  event_series_repository.rs  event_type_repository.rs  expense_account_repository.rs  expense_category_repository.rs  expense_repository.rs  member_repository.rs  membership_type_repository.rs  mod.rs  payment_repository.rs  processed_events_repository.rs  saved_card_repository.rs  scheduled_payment_repository.rs
src/service/: announcement_admin_service.rs  announcement_type_service.rs  audit_service.rs  basic_type_service.rs  billing_service.rs  configurable_types.rs  event_admin_service.rs  event_type_service.rs  expense_account_service.rs  expense_category_service.rs  expense_service.rs  member_service.rs  membership_type_service.rs  mod.rs  payment_admin_service.rs  payment_service.rs  recurring_event_service.rs  settings_service.rs
src/util/: string.rs
src/web/: mod.rs  portal.rs  uploads.rs
static/: style.css
templates/admin/: _admin_alert.html  _admin_payment_list.html  _event_occurrence_row.html  _member_row_flash.html  announcement_detail.html  announcement_new.html  announcements.html  announcements_table.html  audit_log.html  billing_dashboard.html  billing_settings.html  discord_settings.html  email_settings.html  event_detail.html  event_new.html  event_occurrence_override_form.html  event_series_detail.html  events.html  events_table.html  member_detail.html  member_import.html  member_import_error.html  member_import_result.html  member_new.html  members.html  members_table.html  record_payment.html  settings.html
templates/auth/: forgot_password.html  login.html  login_totp.html  reset_password.html  reset_password_result.html  setup.html  verify_result.html
templates/dashboard/: member.html
templates/emails/: admin_alert.html  admin_alert.txt  (+16 more)
tests/: admin_member_export_test.rs  admin_member_import_test.rs  admin_types_audit_test.rs  api_login_totp.rs  auth_middleware_test.rs  auto_renew_alert_test.rs  basic_type_repository_test.rs  billing_dashboard_test.rs  bot_challenge_test.rs  create_admin_test.rs  csrf_coverage_test.rs  email_tokens_test.rs  event_reminder_test.rs  expense_report_test.rs  expense_repository_test.rs  expense_service_test.rs  expense_tax_prep_test.rs  expiration_test.rs  finance_routing_test.rs  member_repository_test.rs  member_template_snapshots.rs  openapi_test.rs  payment_service_test.rs  portal_password_change_sessions_test.rs  recurring_event_test.rs  saved_card_routes_test.rs  scheduled_announcement_publish_test.rs  setup_redirect_test.rs  stripe_gateway_test.rs  stripe_webhook_test.rs  totp_test.rs  web_login_session_create_fail.rs  web_login_totp.rs
(+562 files in other folders)
