[package]
name = "coterie"
version = "0.1.0"
edition = "2021"

[lib]
name = "coterie"
path = "src/lib.rs"

[[bin]]
name = "coterie"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "fs"] }
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
argon2 = { version = "0.4", features = ["std"] }
jsonwebtoken = "9"
rand = "0.8"
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = "0.18"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }

# Templating
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Payment processing
stripe = { package = "async-stripe", version = "0.39", default-features = false, features = ["runtime-tokio-hyper", "checkout", "webhook-events", "connect"] }

# Data generation for seeding (used by seed binary)
fake = { version = "2.9", features = ["derive"] }

# CLI argument parsing (used by seed binary)
clap = { version = "4", features = ["derive"] }
urlencoding = "2.1.3"
tokio-util = { version = "0.7.18", features = ["io"] }

# Email (SMTP via lettre, async on tokio + rustls)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "hostname"] }

# Symmetric encryption for secrets-at-rest (e.g. SMTP password stored in DB)
chacha20poly1305 = "0.10"
base64 = "0.22"

# HMAC for stateless CSRF tokens
hmac = "0.12"
subtle = "2.6"

# HTTP client for outbound integrations (Discord, future Unifi)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
