[package]
name = "coterie-provision"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coterie-provision"
path = "src/main.rs"

[lib]
name = "coterie_provision"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
inquire = "0.7"
secrecy = "0.8"
tempfile = "3"
rand = "0.8"
hex = "0.4"
regex = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[features]
test-support = []

[[test]]
name = "install_flow"
required-features = ["test-support"]

[[test]]
name = "caddyfile"
required-features = ["test-support"]

[[test]]
name = "switch_to_live"
required-features = ["test-support"]
